--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -121,6 +121,67 @@
             "env": {
                 "run.config": "{\"handlerId\":\"fiori_tools\",\"runnableId\":\"/home/user/Fiori/consume_odata_to_ui5_app\"}"
             }
+        },
+        {
+            "name": "Start login_ui5_app",
+            "type": "node",
+            "request": "launch",
+            "runtimeExecutable": "npm",
+            "cwd": "${workspaceFolder}/login_ui5_app",
+            "windows": {
+                "runtimeExecutable": "npm.cmd"
+            },
+            "runtimeArgs": [
+                "run-script",
+                "start"
+            ],
+            "console": "integratedTerminal",
+            "internalConsoleOptions": "neverOpen",
+            "port": 9229,
+            "env": {
+                "DEBUG": "--inspect",
+                "run.config": "{\"handlerId\":\"fiori_tools\",\"runnableId\":\"/home/user/Fiori/login_ui5_app\"}"
+            }
+        },
+        {
+            "name": "Start login_ui5_app Mock",
+            "type": "node",
+            "request": "launch",
+            "cwd": "${workspaceFolder}/login_ui5_app",
+            "runtimeExecutable": "npm",
+            "windows": {
+                "runtimeExecutable": "npm.cmd"
+            },
+            "runtimeArgs": [
+                "run-script",
+                "start-mock"
+            ],
+            "console": "integratedTerminal",
+            "internalConsoleOptions": "neverOpen",
+            "port": 9229,
+            "env": {
+                "run.config": "{\"handlerId\":\"fiori_tools\",\"runnableId\":\"/home/user/Fiori/login_ui5_app\"}"
+            }
+        },
+        {
+            "name": "Start login_ui5_app Local",
+            "type": "node",
+            "request": "launch",
+            "cwd": "${workspaceFolder}/login_ui5_app",
+            "runtimeExecutable": "npm",
+            "windows": {
+                "runtimeExecutable": "npm.cmd"
+            },
+            "runtimeArgs": [
+                "run-script",
+                "start-local"
+            ],
+            "console": "integratedTerminal",
+            "internalConsoleOptions": "neverOpen",
+            "port": 9229,
+            "env": {
+                "run.config": "{\"handlerId\":\"fiori_tools\",\"runnableId\":\"/home/user/Fiori/login_ui5_app\"}"
+            }
         }
     ],
     "compounds": [],
